tests/typing/faulty_blobs.sy
A :: blob {
    a: int,
}

start :: fn do
    c :: A {
        a: 1.0,
    }
end
// error: $Mismatch { got: Type::Float, expected: Type::Int }
